--- a/LMS-Library.Service/LMS-Library.Service.csproj
+++ b/LMS-Library.Service/LMS-Library.Service.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.307" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LMS-Library.Api.Data\LMS-Library.Api.Data.csproj" />
   </ItemGroup>
 
