--- a/LMS-Library.Api/appsettings.json
+++ b/LMS-Library.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connection": "Server=(localdb)\\MSSQLLocalDB;Database=Library;MultipleActiveResultSets=true"
+  },
+  "AwsConfiguration": {
+    "AccessKey": "",
+    "SecretKey": ""
+  }
 }
