--- a/LMS-Library.Api/LMS-Library.Api.csproj
+++ b/LMS-Library.Api/LMS-Library.Api.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\LMS-Library.Service\LMS-Library.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
